# ay-ah-yi

./: .gitignore  README.md  img-classifier.py  img-query.py  phrase.py  play.py  skit.py  storage.py
docs/arundathi-roy/: come-september.txt
docs/oliver-tambo/: chatham-house.txt
docs/thabo-mbeki/: i-am-an-african.txt  resignation.txt
oc/: pikonize.py  pyproject.toml
search/: data.json  image_embeddings.pkl  main.py  streamlit_app.py  trail.py  util.py
words/: arch.py  db.py  storage.py
